--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
 
-</head>
+<link rel="stylesheet" href="styles.37880ac4cda20e8e279d.css"></head>
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.bda95d5896422d031328.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.a0fc289fb61c7294e236.js"></script></body>
 </html>
